--- a/style/index.html
+++ b/style/index.html
@@ -72,7 +72,7 @@
                 2016–17 mövsümü
                 Mbappe karyerasında ilk het-triki əsas komanda ilə 14 dekabr 2016-cı ildə etmişdir. Liqa Kubokunun 1/8 final mərhələsində II Lui stadionunda keçirilən görüşdə Monako Renn klubuna 7-0 hesabı ilə qalib gəlmişdir.[10][11] Mbappe 1997-ci ildə Sonni Andersondan sonra turnirdə het-trik edən ilk Monakolu futbolçu olmuşdur.[12]
                 
-                Mbappe Liqa 1-də ilk het-trikini 11 fevral 2017-ci ildə etmişdir. Həmin görüşdə Monako Metz klubuna 5-0 hesabı ilə qalib gəlmişdir. 18 yaş və iki aylığında bunu reallaşdıran Mbappe Jeremi Menezdən sonra Liqa 1-də het-trik edən ən gənc futbolçu olmuşdur. Menez 2005-ci ildə 17 yaşı olarkən Sojo klubunda bu uğura nail olmuşdur.[13]</p>
+                Mbappe Liqa 1-də ilk het-trikini 11 fevral 2017-ci ildə etmişdir. Həmin görüşdə Monako Metz klubuna 5-0 hesabı ilə qalib gəlmişdir. 18 yaş və iki aylığında bunu reallaşdıran Mbappe Jeremi Menezdən sonra Liqa 1-də het-trik edən ən gənc futbolçu olmuşdur. Menez 2005-ci ildə 17 yaşı olarkən Sojo klubunda bu uğura nail olmuşdur.</p>
 
     
 </body>
